--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turborepo-basic-shared",
+  "name": "chat-champions",
   "version": "0.0.0",
   "private": true,
   "workspaces": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
+    "dev:cerberus": "turbo run dev --scope='cerberus'",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
